# news_service

./: .env  Cargo.toml  setup.py
sql/: down.sql  up.sql
src/: main.rs
src/controllers/: comments.rs  mod.rs  posts.rs  users.rs
src/controllers/users/: mod.rs
src/dto/: mod.rs
src/handler/: posts.rs  users.rs
src/models/: comment.rs  mod.rs  post.rs  user.rs
src/models/comment/: mod.rs
src/models/post/: repository.rs
src/models/user/: controller.rs  controllerr.rs  controlller.rs  implementation.rs  repository.rs  validator.rs
src/models/user/repository/: queries.rs
src/models/user/repository/queries/: validation.rs
src/prelude/: mod.rs
src/repositories/: comments.rs  mod.rs  posts.rs
src/repositories/comments/: mod.rs
src/repositories/marks_repo/: comments.rs  mod.rs  posts.rs
src/repositories/posts/: mod.rs
src/repositories/users/: mod.rs  queries.rs
src/types/: mod.rs
src/utils/: mod.rs
src/utils/logger/: console_logger.rs  file_logger.rs  mod.rs
src/utils/sql/: mod.rs
src/validators/: mod.rs  user.rs
src/validators/repository_query/users/: mod.rs
