[package]
name = "news_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "*", features = ["openssl"]}
async-recursion = "1.0.5"
async_once = "0.2.6"
async_static = "0.1.3"
chrono = {version = "0.4.31", features = ["serde"]}
dotenv = "0.15.0"
lazy_static = "1.4.0"
openssl = "0.10.61"
regex = "1.10.2"
serde = "1.0.193"
serde_json = "1.0.108"
sqlx = {version = "0.7.2", features = ["postgres", "time", "chrono", "uuid", "runtime-tokio"]}

[dependencies.uuid]
version = "1.6.1"
features = ["v4", "fast-rng", "macro-diagnostics"]
